log
Sat, Apr 19, 2025  5:16:30 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  5:17:01 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3c32d9f
Sat, Apr 19, 2025  5:51:48 PM: 
 hashmap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  0|0
3578eb7
Sat, Apr 19, 2025  5:54:05 PM: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  5|4
total_score: 30/70
c58008a
Sat, Apr 19, 2025  5:58:42 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
43c1b39
Sat, Apr 19, 2025  5:59:07 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
bd69e12
Sat, Apr 19, 2025  6:08:42 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
0838676
Sat, Apr 19, 2025  6:19:43 PM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
3dfbd47
Sat, Apr 19, 2025  6:20:00 PM: 
 hashmap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
0fa539c
Sat, Apr 19, 2025  6:20:04 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
e3e5123
Sat, Apr 19, 2025  6:20:08 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
80ef992
Sat, Apr 19, 2025  6:20:12 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
539c5f5
